# llm-json

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
examples/: basic_json.cpp  basic_parse.cpp  build_request.cpp  json_types.cpp  parse_response.cpp
include/: llm_json.hpp
